--- a/3_quick_github_tutorial.Rmd
+++ b/3_quick_github_tutorial.Rmd
@@ -1,9 +1,4 @@
----
-title: "Version control using GitHub"
-author: "Eole Cervenka"
-date: "July 8, 2016"
-output: html_document
----
+# Using Version Control Tool Git
 
 ## Philosophy of Git
 
@@ -14,8 +9,8 @@ blah
 1. Sign up for a GitHub account
 1. Install Git to manage projects locally ([-> install instructions <-](https://git-scm.com/downloads))
 1. Configure Git:
-+ `git config --global user.name "Your Name Here"`
-+ `git config --global user.email "your_email@youremail.com"`
+  + `git config --global user.name "Your Name Here"`
+  + `git config --global user.email "your_email@youremail.com"`
 
 ## Example
 
