--- a/2_cookiecutter_datascience.Rmd
+++ b/2_cookiecutter_datascience.Rmd
@@ -11,11 +11,13 @@
 ## Starting a new project
 
 1. Go into the local directory where you want to store the project files: `cd your/project/directory`
-1. Console: `cookiecutter https://github.com/drivendata/cookiecutter-data-science`
-1. Input project name
-1. Input repo name
-1. Input author name
-1. Input project description
+1. Generate a project structure: `cookiecutter https://github.com/drivendata/cookiecutter-data-science`
+1. Type in:
+
++ your project name
++ a repository name
++ the author name
++ a project description
  
 
 ## Directory structure
