--- a/3_quick_github_tutorial.Rmd
+++ b/3_quick_github_tutorial.Rmd
@@ -18,7 +18,7 @@ blah
 
 2. `git init` ; Initialize a git repository from the project folder:
 
-3. (Optional) `touch Readme.txt` ; create a README file in case you are not already using the `cookiecutter` package which already contains a README.md file.
+3. `touch Readme.txt` (optional); create a README file in case you are not already using the `cookiecutter` package which already contains a README.md file.
 
 4. `git remote add origin https://github.com/username/myproject.git` ; Connect local repo to GitHub repository
 
