--- a/4_quick_github_tutorial.Rmd
+++ b/4_quick_github_tutorial.Rmd
@@ -9,12 +9,13 @@ blah
 1. Sign up for a GitHub account
 1. Install Git to manage projects locally ([-> install instructions <-](https://git-scm.com/downloads))
 1. Configure Git:
-  + `git config --global user.name "Your Name Here"`
-  + `git config --global user.email "your_email@youremail.com"`
+  + % `git config --global user.name "Your Name Here"`
+  + % `git config --global user.email "your_email@youremail.com"`
 
 ## Use case #1: Upload a local project to GitHub
 
-1. `cd my/local/project/folder` ; Go to your local project folder
+1. Go to your local project folder
+```% cd my/local/project/folder```
 
 2. `git init` ; Initialize a git repository from the project folder:
 
