--- a/4_quick_github_tutorial.Rmd
+++ b/4_quick_github_tutorial.Rmd
@@ -9,19 +9,28 @@ blah
 1. Sign up for a GitHub account
 1. Install Git to manage projects locally ([-> install instructions <-](https://git-scm.com/downloads))
 1. Configure Git:
-  + % `git config --global user.name "Your Name Here"`
-  + % `git config --global user.email "your_email@youremail.com"`
+  + `% git config --global user.name "Your Name Here"`
+  + `% git config --global user.email "your_email@youremail.com"`
 
 ## Use case #1: Upload a local project to GitHub
 
 1. Go to your local project folder
-```% cd my/local/project/folder```
+```
+% cd my/local/project/folder
+```
 
-2. `git init` ; Initialize a git repository from the project folder:
+2. Initialize a git repository from the project folder: 
+```
+% git init
+```
 
-3. `touch Readme.txt` (optional); create a README file in case you are not already using the `cookiecutter` package which already contains a README.md file.
+3. (optional) Create a README file in case you are not using the `cookiecutter` package which already contains a README.md file.
+```
+% touch Readme.txt
+```
 
-4. `git remote add origin https://github.com/username/myproject.git` ; Connect local repo to GitHub repository
+4. Connect local repo to GitHub repository
+`% git remote add origin https://github.com/username/myproject.git`
 
 
 ## Git-Specific Commands
