--- a/4_quick_github_tutorial.Rmd
+++ b/4_quick_github_tutorial.Rmd
@@ -14,22 +14,22 @@ blah
 
 ## Use case #1: Upload a local project to GitHub
 
-1. Go to your local project folder
+Go to your local project folder
 ```
 % cd my/local/project/folder
 ```
 
-2. Initialize a git repository from the project folder: 
+Initialize a git repository from the project folder: 
 ```
 % git init
 ```
 
-3. (optional) Create a README file in case you are not using the `cookiecutter` package which already contains a README.md file.
+(Optionally,) create a README file in case you are not using the `cookiecutter` package which already contains a README.md file.
 ```
 % touch Readme.txt
 ```
 
-4. Connect local repo to GitHub repository
+Connect local repo to GitHub repository
 `% git remote add origin https://github.com/username/myproject.git`
 
 
