--- a/4_quick_github_tutorial.Rmd
+++ b/4_quick_github_tutorial.Rmd
@@ -29,9 +29,10 @@ Initialize a git repository from the project folder:
 % touch Readme.txt
 ```
 
-Connect local repo to GitHub repository
-`% git remote add origin https://github.com/username/myproject.git`
-
+Connect local repo to GitHub repository:
+```
+% git remote add origin https://github.com/username/myproject.git
+```
 
 ## Git-Specific Commands
 
