--- a/2_cookiecutter_datascience.Rmd
+++ b/2_cookiecutter_datascience.Rmd
@@ -13,9 +13,15 @@
 
 ## Starting a new project
 
-1. Go into the local directory where you want to store the project files: `cd your/project/directory`
-1. Generate a project structure: `cookiecutter https://github.com/drivendata/cookiecutter-data-science`
-1. Type in:
+Go into the local directory where you want to store the project files:
+```
+% cd your/local/project/directory
+```
+Generate a project structure:
+```
+% cookiecutter https://github.com/drivendata/cookiecutter-data-science
+```
+Type in:
  + your project name
  + a repository name
  + the author name
